src/objects/Add_ToBeDel__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Address_ID__c</fullName>
        <label>Address ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Data(To be deleted)</label>
</CustomObject>